<?xml version="1.0" encoding="utf-8"?>
<!-- Ignoring auto fill non-support with this build target.  It's just a tag to say it's not important anyway. -->
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".NewClientActivity">
	<TextView
			android:layout_width="379dp"
			android:layout_height="wrap_content"
			android:id="@+id/activityHeader" tools:text="@string/title_new_client"
			style="@style/activityHeader" tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="16dp"/>

	<TextView
			android:layout_width="0dp"
			android:layout_height="25dp"
			android:id="@+id/firstNameLabel"
			android:layout_marginStart="16dp"
			android:labelFor="@id/firstNameField"
			android:contentDescription="@string/hint_client_name"
			tools:text="@string/name"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/activityHeader"
			android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:id="@+id/firstNameField"
			android:importantForAutofill="no"
			app:layout_constraintTop_toBottomOf="@+id/firstNameLabel" android:layout_marginStart="22dp"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toStartOf="@+id/lastNameField"/>

	<EditText
			android:layout_width="176dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:id="@+id/lastNameField"
			app:layout_constraintEnd_toEndOf="parent"
			android:importantForAutofill="no" tools:layout_editor_absoluteY="89dp" android:layout_marginEnd="16dp"/>

	<!-- email -->
	<TextView
			android:id="@+id/emailLabel"
			android:labelFor="@id/emailField"
			android:contentDescription="@string/hint_email"
			tools:text="@string/email"
			android:layout_width="0dp"
			android:layout_height="25dp"
			android:layout_marginStart="16dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/errorText_contact"/>
	<!-- note the change in inputType for later -->
	<EditText
			android:id="@+id/emailField"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress"
			android:ems="10"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="16dp"
			android:importantForAutofill="no"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintTop_toBottomOf="@+id/emailLabel" android:layout_marginTop="4dp"/>

	<!-- phone -->
	<TextView
			android:id="@+id/phoneLabel"
			android:labelFor="@id/phoneField"
			android:contentDescription="@string/hint_phone"
			tools:text="@string/phone_number"
			android:layout_width="0dp"
			android:layout_height="25dp"
			android:layout_marginStart="16dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/emailField"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
	<!-- note the change in inputType for later -->
	<EditText
			android:id="@+id/phoneField"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="phone"
			android:ems="10"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="16dp"
			android:importantForAutofill="no" android:textAlignment="viewStart"
			app:layout_constraintTop_toBottomOf="@+id/phoneLabel" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="16dp"/>
	<Button
			android:text="@string/create"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="16dp" android:id="@+id/createClientBttn"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:onClick="createClient"/>
	<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
			android:id="@+id/errorText_name" style="@style/errorText" android:visibility="invisible"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
			app:layout_constraintTop_toBottomOf="@+id/firstNameField" android:text="@string/name_validation"/>
	<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
			android:id="@+id/errorText_contact" style="@style/errorText" android:visibility="invisible"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
			android:text="@string/name_validation"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintTop_toBottomOf="@+id/textView3"/>
	<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/textView3" android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/errorText_name" android:text="@string/subtitle_contactInfo"
			style="@style/form_subtitle" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
</android.support.constraint.ConstraintLayout>
